--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Chillax", sans-serif;
+  -webkit-tap-highlight-color: transparent;
 }
 html,
 body {
@@ -46,16 +47,16 @@ body {
   --color-sec: hsl(0, 0%, 87%);
   --color-text: hsl(0, 0%, 5%);
   --color-text-fade: hsl(0, 0%, 27%);
-  --bg-gr1: hsl(231, 100%, 81%);
-  --bg-gr2: hsl(230, 100%, 88%);
+  --bg-gr1: hsla(231, 100%, 81%, 1);
+  --bg-gr2: hsla(230, 100%, 88%, 1);
 }
 .dark-mode {
   --color-bg: hsl(0, 0%, 7%);
   --color-sec: hsl(0, 0%, 13%);
   --color-text: hsl(0, 0%, 95%);
   --color-text-fade: hsl(0, 0%, 77%);
-  --bg-gr1:hsl(0, 0%, 19%);
-  --bg-gr2:hsl(0, 0%, 12%);
+  --bg-gr1:hsla(246, 61%, 41%, 0.2);
+  --bg-gr2:hsla(247, 65%, 51%, 0.2);
 }
 
 
@@ -117,6 +118,9 @@ body {
   position: relative;
   font-size: 1rem;
 }
+.nav-links a {
+  position: relative;
+}
 .nav-links a.active::after {
   content: "";
   position: absolute;
@@ -132,12 +136,18 @@ body {
 .nav-btn {
   background-color: var(--color-acc-500);
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: 500;
   padding: 8px 16px;
   border-radius: 50px;
   color: var(--color-acc-50) !important;
+  transition: all 0.2s ease-in-out;
 }
-
+.nav-btn:hover {
+  background-color: var(--color-acc-600);
+}
+.nav-btn:active {
+  background-color: var(--color-acc-700);
+}
 /* Theme Toggle Button */
 .theme {
   display: flex;
@@ -150,12 +160,20 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
+.theme:hover img {
+  width: 28px;
+  height: 28px;
+}
+.theme:active img {
+  width: 32px;
+  height: 32px;
+}
 
 /* Theme Button Icons */
 .theme img {
   width: 24px;
   height: 24px;
-  transition: opacity 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .mark {
@@ -178,14 +196,16 @@ body {
 }
 
 .hero-headline {
-  font-size: 3rem;
-  font-weight: bold;
+  font-size: 4rem;
+  font-weight: 500;
+  letter-spacing: -2px;
   color: var(--color-text-fade);
   margin-bottom: 20px;
 }
 
 .hero-tagline {
   font-size: 1.5rem;
+  font-weight: 300;
   margin-bottom: 70px;
   color: var(--color-text);
 }
@@ -200,7 +220,7 @@ body {
 .btn-secondary {
   padding: 10px 20px;
   font-size: 1rem;
-  font-weight: bold;
+  font-weight: 500;
   border-radius: 5px;
   text-decoration: none;
   transition: transform 0.3s ease;
@@ -209,12 +229,28 @@ body {
 .btn-primary {
   background: var(--color-acc-500);
   color: var(--color-acc-50);
+  transition: all 0.2s ease-in-out;
+}
+.btn-primary:hover {
+  background-color: var(--color-acc-700);
+}
+.btn-primary:active {
+  background-color: var(--color-acc-800);
 }
 
 .btn-secondary {
   background: transparent;
-  border: 3px solid var(--color-acc-500);
+  border: 2px solid var(--color-acc-500);
   color: var(--color-acc-500);
+  transition: all 0.2s ease-in-out;
+}
+.btn-secondary:hover {
+  border: 2px solid var(--color-acc-600);
+  color: var(--color-acc-600);
+}
+.btn-secondary:active {
+  border: 2px solid var(--color-acc-800);
+  color: var(--color-acc-800);
 }
 
 
